--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   },
   "dependencies": {
     "react": "15.3.1",
-    "react-native": "^0.28.0",
-    "react-native-image-zoom": "^0.30.0",
-    "react-native-maps": "git://github.com/lelandrichardson/react-native-maps.git#0.4-stable",
+    "react-native": "^0.33.0",
+    "react-native-maps": "^0.8.2",
     "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-picker-android": "^1.0.3",
     "react-native-responsive-image": "^1.3.0"
