--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native-maps": "^0.8.2",
     "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-picker-android": "^1.0.3",
-    "react-native-responsive-image": "^1.3.0"
+    "react-native-responsive-image": "^1.3.0",
+    "react-native-share": "^1.0.13"
   }
 }
