--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "react": "15.3.1",
     "react-native": "^0.33.0",
+    "react-native-lightbox": "^0.6.0",
     "react-native-maps": "^0.8.2",
     "react-native-parallax-scroll-view": "^0.19.0",
+    "react-native-photo-view": "^1.0.1",
     "react-native-picker-android": "^1.0.3",
     "react-native-responsive-image": "^1.3.0",
     "react-native-share": "^1.0.13"
