--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-photo-view": "^1.0.1",
     "react-native-picker-android": "^1.0.3",
     "react-native-responsive-image": "^1.3.0",
-    "react-native-share": "^1.0.13"
+    "react-native-share": "^1.0.13",
+    "react-native-vector-icons": "^2.1.0"
   }
 }
