--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -9,3 +9,5 @@ include ':react-native-share'
 project(':react-native-share').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-share/android')
 include ':react-native-maps'
 project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-maps/android')
+include ':react-native-image-zoom'
+project(':react-native-image-zoom').projectDir = file('../node_modules/react-native-image-zoom/android')
