--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "15.3.1",
     "react-native": "^0.33.0",
+    "react-native-image-zoom": "^0.31.0",
     "react-native-lightbox": "^0.6.0",
     "react-native-maps": "^0.8.2",
     "react-native-parallax-scroll-view": "^0.19.0",
