--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   },
   "dependencies": {
     "react": "15.3.1",
-    "react-native": "^0.33.0",
-    "react-native-image-zoom": "^0.31.0",
-    "react-native-lightbox": "^0.6.0",
-    "react-native-maps": "^0.8.2",
+    "react-native": "^0.39.0",
+    "react-native-app-intro": "^1.1.5",
+    "react-native-google-places-autocomplete": "^1.2.6",
+    "react-native-maps": "^0.11.0",
+    "react-native-modalbox": "^1.3.8",
     "react-native-parallax-scroll-view": "^0.19.0",
-    "react-native-photo-view": "^1.0.1",
-    "react-native-picker-android": "^1.0.3",
+    "react-native-photo-view": "^1.2.0",
     "react-native-responsive-image": "^1.3.0",
-    "react-native-share": "^1.0.13",
+    "react-native-share": "^1.0.17",
     "react-native-vector-icons": "^2.1.0"
   }
 }
